# rhythm_trainer

./: README.md  pubspec.yaml
android/: settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/cpp/include/: audio_callback.h  audio_config.h  audio_source.h  metronome.h  mixer.h  my_log.h  neon_stuff.h  note.h  sampler.h  sequencer.h  transport.h  wave_renderer.h  waveforms.h
android/app/src/main/cpp/src/: audio_callback.cpp  metronome.cpp  mixer.cpp  my_log.cpp  sampler.cpp  sequencer.cpp  sound_player.cpp  wave_renderer.cpp  waveforms.cpp
android/app/src/main/kotlin/com/example/rhythm_trainer/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: audio_thing.dart  drum_pattern.dart  drum_pattern_widget.dart  log_widget.dart  main.dart  main_app.dart  midi_listener.dart  native_wrapper.dart  samples_library.dart  simple_training_engine.dart  train_zone_bl.dart  train_zone_page.dart  training_engine.dart  training_engine_events.dart  user_input_analyzer.dart
lib/exercise_screen/: exercise_screen.dart
lib/exercises_list_screen/: exercises_list_screen.dart
lib/src/logic/: exercise.dart  simple_training_engine.dart  timing.dart  training_engine.dart  training_engine_events.dart  training_template.dart  user_accuracy.dart  user_input_analyzer.dart
lib/src/storages/: training_template_storage.dart
lib/src/widgets/drum_pattern/: drum_pattern_painter.dart  drum_pattern_widget.dart  tap_effect.dart  tap_effect_widget.dart
lib/src/widgets/rhythm_view/: rhythm_view.dart  tap_data.dart  user_tap.dart
lib/src/widgets/rhythm_view/effects/: my_first_tap_effect_widget.dart  tap_effect.dart
lib/src/widgets/rhythm_view/scrolling_rhythm_view/: paint_config.dart  paint_scene.dart  scrolling_rhythm_view.dart
lib/src/widgets/rhythm_view/static_view/: static_rhythm_painter.dart  static_rhythm_view.dart
lib/training_screen/: train_zone_page.dart
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native_andr/: CMakeLists.txt  audio_callback.cpp  audio_callback.h  first_try.c  metronome.cpp  metronome.h  mixer.cpp  mixer.h  sampler.cpp  sampler.h  sequencer.cpp  sequencer.h  sound_player.c  sound_player.cpp  wave_renderer.cpp  waveforms.cpp  waveforms.h
test/: grid_tolerance_test.dart  user_input_analyze_test.dart  widget_test.dart
